--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ hamburger.addEventListener("click",()=>{
     index.classList.toggle("-translate-x-96");
     index.classList.toggle("translate-x-2")
     index.classList.toggle("w-fit");
+    index.classList.toggle("space-y-4");
 });
 
 
